tests/test-runner.css
.tests-result-container {
    font-family: monospace, monospace;
    display: flex;
    flex-direction: row;
    gap: 0.5rem;
}

@media only screen and (max-width: 600px) {
    .tests-result-container {
        flex-direction: column-reverse;
        gap: 0;
    }
}

.tests-result-container table {
    font-size: small;
    width: 100%;
    border-collapse: collapse;
}

.tests-result-container table tr {
    padding: 0.25rem;
    border-top: 1px solid var(--badge-grey--light);
    display: flex;
    align-items: baseline;
    gap: 0.5rem;
}

.tests-result-container table tr:last-child {
    border-bottom: 1px solid var(--badge-grey--light);
}

.tests-result-container table tr:hover .status-badge.status-badge--success {
    border-color: var(--badge-green--dark);
}

.tests-result-container table tr:hover .status-badge.status-badge--info {
    border-color: var(--badge-blue--dark);
}

.tests-result-container table tr:hover .status-badge.status-badge--fail {
    border-color: var(--badge-red--dark);
}

.tests-statistics-container {
    display: flex;
    flex-direction: column;
    color: var(--badge-yellow--dark);
    background-color: var(--badge-yellow--light);
    flex-shrink: 0;
    font-size: x-large;
    padding: 22px 12px;
    gap: 26px;
}

@media only screen and (max-width: 600px) {
    .tests-statistics-container {
        flex-direction: row;
        justify-content: space-around;
        flex-wrap: wrap;
        font-size: large;
        padding: 0.5rem;
        gap: 0.5rem;
        top: 0;
        align-self: stretch;
        position: sticky;
        top: 0;
    }
}

.tests-statistics-container .number-and-badge-wrapper {
    display: flex;
    flex-direction: column;
    gap: 5px;
    text-align: center;
}

@media only screen and (max-width: 600px) {
    .tests-statistics-container .number-and-badge-wrapper {
        display: flex;
        flex-direction: row;
        gap: 0.5rem;
        text-align: center;
        align-items: center;
    }
}

.tests-result-container table tbody {
    display: flex;
    flex-direction: column;
}

.test-passed {
    color: var(--badge-green--dark);
}

.test-passed:hover {
    background-color: var(--badge-green--light);
    border-color: var(--badge-green--light);
}

.test-failed {
    color: var(--badge-red--dark);
}

.test-failed:hover {
    background-color: var(--badge-red--light);
    border-color: var(--badge-red--light);
}

.test-expected-error {
    color: var(--badge-blue--dark);
}

.test-expected-error:hover {
    background-color: var(--badge-blue--light);
    border-color: var(--badge-blue--light);
}

/* Custom style for Accordion widget */
.accordion-widget-container .header-wrapper .icon {
    margin-right: 0.25rem;
}